Fix text-align

--- a/common.css
+++ b/common.css
@@ -38,6 +38,8 @@ body {
 
 #description {
     font-size: 120%;
+    text-align: left;
+    display: inline-block;
 }
 
 #anyone {
